crates/llvmkit-ir/tests/compile_fail/block_call_wrong_arg_type.stderr
error[E0277]: the trait bound `f64: IntoIntValue<'_, i32, Brand<'_>>` is not satisfied
  --> tests/compile_fail/block_call_wrong_arg_type.rs:35:36
   |
35 |         let _ = head.label().call((1.0_f64,));
   |                              ----  ^^^^^^^ the trait `IntoIntValue<'_, i32, Brand<'_>>` is not implemented for `f64`
   |                              |
   |                              required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoIntValue<'ctx, W, B>`:
             `i128` implements `IntoIntValue<'_, Width<N>, B>`
             `i128` implements `IntoIntValue<'_, i128, B>`
             `i16` implements `IntoIntValue<'_, Width<N>, B>`
             `i16` implements `IntoIntValue<'_, i128, B>`
             `i16` implements `IntoIntValue<'_, i16, B>`
             `i16` implements `IntoIntValue<'_, i32, B>`
             `i16` implements `IntoIntValue<'_, i64, B>`
             `i32` implements `IntoIntValue<'_, Width<N>, B>`
           and $N others
   = note: required for `f64` to implement `IntoCallArg<'_, i32, Brand<'_>>`
   = note: required for `(f64,)` to implement `CallArgs<'_, (i32,), Brand<'_>>`
note: required by a bound in `BasicBlockLabel::<'ctx, R, B, Params>::call`
  --> src/basic_block.rs
   |
   |     pub fn call<A>(self, args: A) -> BlockCall<'ctx, R, B, Params>
   |            ---- required by a bound in this associated function
   |     where
   |         A: CallArgs<'ctx, Params, B>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `BasicBlockLabel::<'ctx, R, B, Params>::call`
